# asctec_mav_framework

./: .gitignore  README.md  stack.xml
asctec_hl_comm/: CMakeLists.txt  manifest.xml  package.xml
asctec_hl_comm/action/: Waypoint.action
asctec_hl_comm/include/asctec_hl_comm/: HL_SSDK.h  HL_interface.h  extPositionCtrl.h
asctec_hl_comm/msg/: CamTrigger.msg  GpsCustom.msg  MotorSpeed.msg  WPControllerCommand.msg  WPControllerWaypoint.msg  WaypointActionAbort.msg  mav_ctrl.msg  mav_status.msg
asctec_hl_comm/src/: pressure_point_publisher.py
asctec_hl_comm/srv/: CamTriggerSrv.srv  MavCtrlSrv.srv  camera_ctrl.srv
asctec_hl_firmware/: .gitignore  Asctec JTAG Debug 2.0.launch  LL_HL_comm.c  LL_HL_comm.h  adc.c  adc.h  buzzer.c  buzzer.h  crt.s  debug.h  declination.h  dekf.c  dekf.h  gpsmath.c  gpsmath.h  hardware.c  hardware.h  i2c.c  i2c.h  install_arm7_gcc.sh  lpc2xxx_asctecusbjtag05.cfg  lpcUART.h  main.c  main.h  main.hex  makefile  manifest.xml  mymath.c  mymath.h  package.xml  pelican_ptu.c  pelican_ptu.h  sdk.c  sdk.h  ssp.c  ssp.h  syscalls.c  system.c  system.h  types.h  (+6 more)
asctec_hl_firmware/Common_WinARM/: LPC2138-RAM.ld
asctec_hl_firmware/Common_WinARM/inc/: interrupt_utils.h  timer.h
asctec_hl_firmware/Common_WinARM/src/: Startup.S  irq.c  target.c
asctec_hl_firmware/d_ekf/: add_eml_compliance.m  c_codegen.m  ekf_zero_order_propagation_sym.m  quat2rot.m  quatskew_sym.m  rtw_arm7_config.mat
asctec_hl_firmware/d_ekf/d_ekf_src/ekf/: autogen_ekf_propagation.c  autogen_ekf_propagation.h  autogen_ekf_propagation_initialize.c  autogen_ekf_propagation_initialize.h  autogen_ekf_propagation_terminate.c  autogen_ekf_propagation_terminate.h  autogen_ekf_propagation_types.h  pos_ekf_initialize.c  pos_ekf_initialize.h  pos_ekf_terminate.c  pos_ekf_terminate.h  pos_ekf_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rt_pow32_snf.c  rt_pow32_snf.h  rtwtypes.h
asctec_hl_firmware/original_hl_sdk_2.0/: LL_HL_comm.c  LPC2k_ee.c  LPC2k_ee.h  adc.c  buzzer.h  gpsmath.c  gpsmath.h  i2c.h  main.c  main.h  makefile  mymath.h  pelican_ptu.c  pelican_ptu.h  sdk.c  sdk.h  ssp.c  syscalls.c  system.c  system.h  uart.c  uart.h  ublox.h
asctec_hl_firmware/original_hl_sdk_2.0/Common_WinARM/: LPC2146-ROM.ld
asctec_hl_firmware/original_hl_sdk_2.0/Common_WinARM/inc/: irq.h  swi.h  target.h  type.h
asctec_hl_firmware/original_hl_sdk_2.0/Common_WinARM/src/: swi_handler.S  timer.c
asctec_hl_firmware/ssdk/include/: ert_main.h
asctec_hl_gps/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
asctec_hl_gps/launch/: gps_convert.launch  gps_set_ref.launch
asctec_hl_gps/src/: geodesy_ned.hpp  gps_conversion.cpp  gps_conversion.h  gps_conversion_node.cpp  gps_fusion.cpp  gps_fusion_node.cpp  set_gps_reference.cpp  set_gps_reference_node.cpp
asctec_hl_gps/srv/: Wgs84ToEnu.srv
asctec_hl_interface/: CMakeLists.txt  fcu_parameters.yaml  mainpage.dox  manifest.xml  package.xml  package_doc.txt  rosdoc.yaml
asctec_hl_interface/cfg/: HLInterface.cfg  SSDK.cfg  hl_interface.cfg  ssdk.cfg  waypoint.cfg
asctec_hl_interface/launch/: fcu.launch  fcu_parameters.yaml  ssdk_parameters.yaml
asctec_hl_interface/scripts/: plot_acceleration  plot_angular_velocity  plot_cmd  plot_ctrl_output  plot_filter_bias  plot_filter_position  plot_filter_velocity  plot_orientation  plot_position_input  plot_rc  plot_refmodel  sampleways.txt  trajectory_nav.py  waypoint_nav
asctec_hl_interface/src/: body_command_converter.cpp  comm.cpp  comm.h  ctrl_test.cpp  ekf_interface.cpp  ekf_interface.h  helper.h  hl_interface.cpp  hl_interface.h  node.cpp  serial_dump.cpp  serial_dump.h  ssdk_interface.cpp  ssdk_interface.h  waypoint_client.cpp  waypoint_node.cpp  waypoint_server.cpp
asctec_hl_tools/scripts/trajectory_generation/: ellipse.txt  ellipse_6x3_1-5.txt  ellipse_6x3_2.txt  ellipse_6x3_2_yaw.txt  equalizeWaypoints.m  genSpline.m  generateTrajectoryFile.m  limit.m  ppdiff.m  ppint.m  simulateRefmodel.m  simulateRefmodel3rdOrder.m  simulateRefmodelNthOrder.m  splinefit.m  trajectory_generation.m
asctec_mav_framework/: CMakeLists.txt  package.xml
mission_control/: CMakeLists.txt  manifest.xml
mission_control/src/: gps_fusion.cpp  gps_fusion.h  height_vicon_fusion.cpp  set_gps_reference.cpp
