<package>
  <name>asctec_hl_gps</name>
  <version>0.1.0</version>
  <description>mission_control</description>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mission_control</url>
  <url type="bugtracker">https://github.com/ethz-asl/asctec_mav_framework/issues</url>

  <author>Markus Achtelik</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>asctec_hl_comm</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>asctec_hl_comm</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>

  </export>
</package>
