<package>
  <name>asctec_hl_interface</name>
  <version>0.1.0</version>
  <description>Interfaces to the "HighLevel" Processor of the Ascending Technologies helicopters where fast IMU datafusion with arbitrary external position input and position control is executed at 1 kHz. 
     Furthermore, all relevant data as IMU, GPS and status can be accessed at configurable rates and baudrates.</description>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/asctec_hl_interface</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Markus Achtelik</author>
  <author>Michael Achtelik</author>
  <author>Stephan Weiss</author>
  <author>Laurent Kneip</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>asctec_hl_comm</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>sensor_fusion_comm</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>asctec_hl_comm</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>sensor_fusion_comm</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>asctec_hl_comm</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>diagnostic_updater</test_depend> -->
  <!-- <test_depend>sensor_fusion_comm</test_depend> -->

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
